# silent_edge

./: .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  bullet.cpp  game.h  lint.sh  map.h  meleeWeapon.cpp  rangedWeapon.cpp  rangedWeapon.h  room.cpp  room.h  tile.cpp  tile.h  weapon.h
docs/: silent_edge_uml.puml
docs/Druga faza/: silent_edge_uml.puml
resources/: results.txt
src/: CMakeLists.txt  main.cpp
src/client/: client.cpp  client.hpp  client_manager.cpp  client_manager.hpp
src/entity/: CMakeLists.txt  bullet.cpp  bullet.h  bullet.hpp  entity.cpp  entity.h  entity.hpp  meleeWeapon.h  melee_weapon.cpp  melee_weapon.hpp  player.cpp  player.h  player.hpp  ranged_weapon.cpp  ranged_weapon.hpp  turret.cpp  turret.h  turret.hpp  weapon.cpp  weapon.hpp
src/game/: CMakeLists.txt  game.cpp  game.hpp  game_logic_handler.cpp  game_logic_handler.hpp
src/gui/: CMakeLists.txt  bullet_drawer.cpp  bullet_drawer.hpp  entity_drawer.cpp  entity_drawer.hpp  game_window.cpp  game_window.hpp  lobby.cpp  lobby.hpp  lobby.ui  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  map_drawer.cpp  map_drawer.hpp  melee_drawer.cpp  melee_drawer.hpp  overlay_drawer.cpp  overlay_drawer.hpp  player_drawer.cpp  player_drawer.hpp  results.cpp  results.hpp  results.ui  tile_drawer.cpp  tile_drawer.hpp  weapon_drawer.cpp  weapon_drawer.hpp
src/map/: CMakeLists.txt  map.cpp  map.h  map.hpp  map_matrix.txt  overlay.cpp  overlay.hpp  room.cpp  room.h  room.hpp  tile.cpp  tile.hpp  tileset.cpp  tileset.h  tileset.hpp
src/serialization/: binary_serializer.cpp  binary_serializer.hpp  game_serialization_global.hpp  game_serialization_global.pro  serializable.cpp  serializable.hpp  serializer.hpp
src/server/: connection.cpp  connection.hpp  connection_thread.cpp  connection_thread.hpp  game_logic_handler.cpp  game_logic_handler.hpp  server.cpp  server.hpp  server_config.hpp  server_main.hpp
