qt_add_library(
    SilentEdgeEntity
    STATIC
    entity.cpp
    entity.hpp
    melee_weapon.cpp
    melee_weapon.hpp
    player.cpp
    player.hpp
    ranged_weapon.cpp
    ranged_weapon.hpp
    turret.cpp
    turret.hpp
    weapon.cpp
    weapon.hpp
    bullet.cpp
    bullet.hpp
)

target_link_libraries(
    SilentEdgeEntity
    PRIVATE 
    Qt${QT_VERSION_MAJOR}::Core 
    Qt${QT_VERSION_MAJOR}::Widgets
)
target_include_directories(
    SilentEdgeEntity 
    INTERFACE 
    ${CMAKE_CURRENT_SOURCE_DIR}
)
